--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,38 +53,60 @@ jobs:
       - name: Lint code for consistent style
         run: bin/rubocop -f github
 
-  test:
-    runs-on: ubuntu-latest
+test:
+  runs-on: ubuntu-latest
 
-    # services:
-    #  redis:
-    #    image: redis
-    #    ports:
-    #      - 6379:6379
-    #    options: --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
-    steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y build-essential git libyaml-dev pkg-config google-chrome-stable
+  services:
+    mysql:
+      image: mysql:8
+      env:
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: bankencore_test
+      ports: ["3306:3306"]
+      options: >-
+        --health-cmd="mysqladmin ping -h 127.0.0.1 -proot"
+        --health-interval=10s --health-timeout=5s --health-retries=10
 
-      - name: Checkout code
-        uses: actions/checkout@v4
+  env:
+    RAILS_ENV: test
+    DATABASE_URL: mysql2://root:root@127.0.0.1:3306/bankencore_test
+    DISABLE_SPRING: 1
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+  steps:
+    - uses: actions/checkout@v4
 
-      - name: Run tests
-        env:
-          RAILS_ENV: test
-          # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:test:prepare test test:system
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: .ruby-version
+        bundler-cache: true
 
-      - name: Keep screenshots from failed system tests
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: screenshots
-          path: ${{ github.workspace }}/tmp/screenshots
-          if-no-files-found: ignore
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - uses: browser-actions/setup-chrome@v1
+
+    - name: System deps
+      run: |
+        sudo apt-get update
+        sudo apt-get install --no-install-recommends -y \
+          build-essential git libyaml-dev pkg-config default-mysql-client
+
+    - name: JS deps + build CSS
+      run: |
+        npm ci
+        npm run build:css
+
+    - name: DB prepare
+      run: bin/rails db:prepare
+
+    - name: Run tests
+      run: bin/rails test test:system
+
+    - name: Keep screenshots from failed system tests
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with:
+        name: screenshots
+        path: ${{ github.workspace }}/tmp/screenshots
+        if-no-files-found: ignore
