--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
       RAILS_ENV: test
       DATABASE_URL: mysql2://root:root@127.0.0.1:3306/bankencore_test
       DISABLE_SPRING: 1
+      SKIP_SEEDS: 1
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
