--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "main": "index.js",
-  "directories": { "lib": "lib", "test": "test" },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,7 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.13",
-    "daisyui": "^5.1.13",
-    "tailwindcss": "^4.1.13"
+    "daisyui": "^5.1.27",
+    "tailwindcss": "^4.1.14"
   }
 }
